--- a/main.css
+++ b/main.css
@@ -1,3 +1,30 @@
-/*#myChart {
-	display:none;
-}*/
+.container{
+	display:flex;
+	flex-direction:column;
+	width:100%;
+	height:100%;
+	align-items: center;
+	/*margin-left:auto;*/
+	
+	/*position:absolute;
+	top:50%;
+	left:50%;
+	width:50%;
+	height:50%;*/
+}
+
+/*	width: 50%;
+    height: 50%;*/
+
+.heading {
+	/*display:flex;*/
+	/*margin-left:auto;*/
+	/*margin-right:auto;*/
+}
+
+.buttons{
+	display:flex;
+	flex-direction:row;
+	/*margin-right:auto;*/
+	/*margin-left:auto;*/
+}
