--- a/main.css
+++ b/main.css
@@ -1,9 +1,18 @@
 .container{
-	display:flex;
-	flex-direction:column;
-	width:100%;
-	height:100%;
-	align-items: center;
+/*	display: flex;
+	flex-direction: column;*/
+}
+.container{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    /*margin-right: -50%;*/
+    transform: translate(-50%, -50%);
+    padding:20px;
+    border:solid 2px green;
+    border-radius:20px;
+    /*background-color: red;*/
+	/*align-items: center;*/
 	/*margin-left:auto;*/
 	
 	/*position:absolute;
@@ -17,14 +26,30 @@
     height: 50%;*/
 
 .heading {
+	padding:0px;
+	margin:0px;
 	/*display:flex;*/
 	/*margin-left:auto;*/
 	/*margin-right:auto;*/
 }
 
 .buttons{
-	display:flex;
-	flex-direction:row;
-	/*margin-right:auto;*/
-	/*margin-left:auto;*/
+	/*display:flex;
+	flex-direction:row;*/
+	padding-left:20%;
+	/*padding-right:auto;*/
+}
+#back {
+	display:none;
+}
+@media screen and (max-width: 700px){
+	.heading{
+		font-size:10px;
+	}
+	#time-display{
+		font-size: 16px;
+	}
+	.buttons{
+		font-size:20px;
+	}
 }
