--- a/main.css
+++ b/main.css
@@ -3,6 +3,9 @@
 	flex-direction: column;*/
 }
 .container{
+	display: flex;
+	flex-direction: column;
+	align-items:center;
     position: absolute;
     top: 40%;
     left: 50%;
@@ -26,8 +29,8 @@
     height: 50%;*/
 
 .heading {
-	padding:0px;
-	margin:0px;
+	/*padding:0px;*/
+	/*margin:0px;*/
 	/*display:flex;*/
 	/*margin-left:auto;*/
 	/*margin-right:auto;*/
@@ -36,10 +39,16 @@
 .buttons{
 	/*display:flex;
 	flex-direction:row;*/
-	padding-left:20%;
+	/*padding-left:20%;*/
 	/*padding-right:auto;*/
 }
 #back {
+	display:none;
+}
+#sleep-view {
+	display:none;
+}
+#wake-view {
 	display:none;
 }
 @media screen and (max-width: 700px){
