--- a/main.css
+++ b/main.css
@@ -51,6 +51,9 @@
 #wake-view {
 	display:none;
 }
+#sleep-time{
+	display:none;
+}
 @media screen and (max-width: 700px){
 	.heading{
 		font-size:10px;
